syntax = "proto3";

package if4031;

service UserService {
	// Get token
	rpc getToken(GrpcVoid) returns (Token);

	// Get the nickname
	rpc getNickname(Token) returns (GrpcString);

	// Set nickname
	rpc setNickname(TokenedString) returns (GrpcBool);

	// Join a channel
	rpc joinChannel(TokenedString) returns (GrpcVoid);

	// Leave a channel
	rpc leaveChannel(TokenedString) returns (GrpcVoid);

	// Send a message
	rpc sendMessage(TokenedString) returns (GrpcVoid);

	// Send a message to a particular channel
	rpc sendMessageToChannel(TokenedMessageAndChannel) returns (GrpcVoid);

	// Get messages
	rpc getMessage(Token) returns (stream GrpcString);

	// Exit from the application
	rpc exit(Token) returns (GrpcVoid);
}

message Token {
	string token = 1;
}

message TokenedMessageAndChannel {
	string token = 1;
	string message = 2;
	string channel = 3;
}

message TokenedString {
	string token = 1;
	string value = 2;
}

message GrpcBool {
	bool value = 1;
}

message GrpcString {
	string value = 1;
}

message GrpcVoid {
	// void means void!
}
